--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   margin-bottom: 60px;
+  font-size: 50px;
 }
 
-.list a:hover {
+.list a {
   text-decoration: none;
+  color: black;
 }
 
 li {
-  margin-bottom: 10px;
-  font-size: 20px;
+  margin-bottom: 15px;
+  font-size: 25px;
 }
